# ai-tools-tarot-classifie

./: README.md  pyproject.toml
airflow/dags/: tarot_pipeline.py
bentoml/: service.py
configs/: config.yaml
locust/: locustfile.py
monitoring/: docker-compose.yml
monitoring/grafana/: grafana.ini
monitoring/grafana/provisioning/dashboards/: bentoml-dashboard.json  dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
onnx/: export.py
src/data/: loader.py  preprocessing.py
src/models/: predict.py
src/training/: train.py
tests/: test_preprocessing.py
